suil (0.8.3) unstable;

  * Configure based on compiler target OS for cross-compilation
  * Add Cocoa in Gtk wrapper (patch from Robin Gareus)
  * Various Windows fixes (patches from Robin Gareus)
  * Add Gtk2 and X11 in Qt5 wrappers (patch from Rui Nuno Capela)
  * Fix compilation with -Wl,--no-undefined
  * Fix a few minor/unlikely memory errors
  * Gracefully handle failure to open wrapper
  * Only report suil_ui_supported() if necessary wrapper is compiled in
  * Upgrade to waf 1.8.14

 -- David Robillard <d@drobilla.net>  Fri, 02 Oct 2015 20:55:54 -0400

suil (0.8.2) stable;

  * Fix embedding several Qt UIs in Gtk
  * Add configure options to disable all Gtk or Qt support
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 18:18:00 -0400

suil (0.8.0) stable;

  * Add suil_instance_get_handle (patch from Rui Nuno Capela)
  * Fix compilation errors on some systems
  * Upgrade to waf 1.7.14

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:06:56 -0500

suil (0.6.16) stable;

  * Fix suil_instance_extension_data() for UIs with NULL extension_data
  * Fix crashes and resizing for X11 in Qt (patch from Rui Nuno Capela)

 -- David Robillard <d@drobilla.net>  Mon, 16 Sep 2013 23:48:57 -0400

suil (0.6.14) stable;

  * Print system error message if module fails to load
  * Lower dependency from Gtk 2.24 introduced in 0.6.12
  * Add support for new LV2 idle interface
  * Support resizing for X11 in Gtk (patch from Robin Gareus)
  * Upgrade to waf 1.7.11

 -- David Robillard <d@drobilla.net>  Fri, 09 Aug 2013 00:16:48 -0400

suil (0.6.12) stable;

  * Fix key events for X11 in Gtk without using a troublesome event filter
  * Fix crash when a broken UI returns a NULL descriptor
  * Fix compilation on BSD

 -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 13:03:48 -0500

suil (0.6.10) stable;

  * Downgrade to waf 1.7.5, previous version does not build modules due to
    package check breakage in waf 1.7.6
